# jp-index

./: .gitignore  environment.yml  main.py  pyproject.toml  requirements.txt
notebooks/: consumer.qmd  db.qmd  idb.qmd  index.qmd  spending.qmd  test.qmd
src/dao/: awards_table.py  consumer_table.py  economic_indicators_table.py
src/data/: awards_process.py  awards_pull.py  data_process.py  data_pull.py  lee_carter.py  monte_carlo.py  natality_model.py  pull_awards.py
