[project]
name = "jp-index"
authors = [{ name = "Alejandro Ouslan", email = "alejandro.ouslan@upr.edu" }]
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastexcel>=0.12.0",
  "geoalchemy2>=0.16.0",
  "geopandas>=1.0.1",
  "ibis-framework[sqlite]>=9.5.0",
  "jupyter>=1.1.1",
  "nose>=1.3.7",
  "polars>=1.16.0",
  "pyarrow>=17.0.0",
  "pygam>=0.9.1",
  "requests>=2.32.3",
  "sqlmodel>=0.0.22",
  "tqdm>=4.67.1",
]
